lint fixes
bumped version to 1.6, edited "whats new" string

reenabled round timer.